--- a/src/main/resources/static/css/partials/_teacher.scss
+++ b/src/main/resources/static/css/partials/_teacher.scss
@@ -15,7 +15,7 @@
   }
 
   #messageSendButton {
-    margin: 0 auto;
+    margin: 0 auto 25px;
   }
 }
 
@@ -27,7 +27,7 @@
 
 .container-title {
   text-align: center;
-  padding: 5px 10px;
+  padding: 25px 5px 10px;
   font-weight: 700;
   font-size: 1.5rem;
   margin-bottom: 15px;
