--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -40,13 +40,16 @@ nav ul li {
 .fa-angle-down, .fa-angle-up {
   font-weight: 700; }
 
-#updateProfile, #addStudent, #addTemplate {
+.menu-drop {
   display: none;
   background: #fff;
   text-align: center;
   padding-bottom: 15px; }
-  #updateProfile legend, #addStudent legend, #addTemplate legend {
+  .menu-drop legend {
     margin: 10px auto; }
+
+.menu-section a:focus {
+  background: #fff; }
 
 #addTemplate form {
   text-align: left;
@@ -62,10 +65,6 @@ nav ul li {
   padding: 5px;
   border-color: #ececec; }
 
-.history, .student {
-  position: relative;
-  z-index: 100; }
-
 #teacherSendMessage .teacherSection {
   -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   -moz-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -79,7 +78,7 @@ nav ul li {
   width: 90%;
   margin: 25px auto 3%; }
 #teacherSendMessage #messageSendButton {
-  margin: 0 auto; }
+  margin: 0 auto 25px; }
 
 .message-container {
   background: #fff;
@@ -88,7 +87,7 @@ nav ul li {
 
 .container-title {
   text-align: center;
-  padding: 5px 10px;
+  padding: 25px 5px 10px;
   font-weight: 700;
   font-size: 1.5rem;
   margin-bottom: 15px; }
