--- a/src/main/resources/static/css/partials/_header.scss
+++ b/src/main/resources/static/css/partials/_header.scss
@@ -25,12 +25,12 @@ header {
 
 .mobile-toggle {
   display: none;
-  // padding: 10px 0;
   text-align: center;
   font-size: 1.25rem;
   font-weight: 700;
   cursor: pointer;
 }
+
 
 nav {
 
@@ -44,14 +44,14 @@ nav {
         cursor: pointer;
         color: #333;
         text-decoration: none;
-        // margin: 10px 2px;
         padding: 25px 15px;
-        transition: background .5s;
+        transition: all .5s;
         -webkit-box-shadow:0 2px 3px rgba(0, 0, 0, 0.1);
         -moz-box-shadow:0 2px 3px rgba(0, 0, 0, 0.1);
         box-shadow:0 2px 3px rgba(0, 0, 0, 0.1);
       }
-      a:hover, a:focus {
+      a:hover, .hovered {
+        // transition: all .5s;
         background: #fff;
       }
     }
@@ -74,10 +74,6 @@ nav {
   legend {
     margin: 10px auto;
   }
-}
-
-.menu-section a:focus {
-  background: #fff;
 }
 
 // Syling for template
