--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -30,11 +30,11 @@ nav ul li {
     color: #333;
     text-decoration: none;
     padding: 25px 15px;
-    transition: background .5s;
+    transition: all .5s;
     -webkit-box-shadow: 0 2px 3px rgba(0, 0, 0, 0.1);
     -moz-box-shadow: 0 2px 3px rgba(0, 0, 0, 0.1);
     box-shadow: 0 2px 3px rgba(0, 0, 0, 0.1); }
-  nav ul li a:hover, nav ul li a:focus {
+  nav ul li a:hover, nav ul li .hovered {
     background: #fff; }
 
 .fa-angle-down, .fa-angle-up {
@@ -47,9 +47,6 @@ nav ul li {
   padding-bottom: 15px; }
   .menu-drop legend {
     margin: 10px auto; }
-
-.menu-section a:focus {
-  background: #fff; }
 
 #addTemplate form {
   text-align: left;
