added values to grade select drop down in parent page

--- a/src/main/resources/static/css/partials/_signUpPage.scss
+++ b/src/main/resources/static/css/partials/_signUpPage.scss
@@ -122,7 +122,10 @@ select{
 // Styling Radio Buttons
 .radio-inputs {
   input {
-    margin-left: 10px;
+    margin-left: 15px;
+  }
+  h6 {
+    padding-left: 5px;
   }
 }
 
