--- a/src/main/resources/templates/parent.html
+++ b/src/main/resources/templates/parent.html
@@ -143,8 +143,8 @@
                     <label id="studentPrimarySchoolLabel" for="registerStudentPrimarySchool">School* </label>
                 </div>
                 <div class="input-wrapper">
-                    <select>
-                        <option value="">Select Grade</option>
+                    <select name="studentPrimaryGrade">
+                        <option>Select Grade</option>
                         <option>6</option>
                         <option>7</option>
                         <option>8</option>
@@ -177,8 +177,8 @@
                         <label id="studentSecondarySchoolLabel" for="registerStudentSecondarySchool">School </label>
                     </div>
                     <div class="input-wrapper">
-                        <select>
-                            <option value="">Select Grade</option>
+                        <select name="studentSecondaryGrade">
+                            <option>Select Grade</option>
                             <option>6</option>
                             <option>7</option>
                             <option>8</option>
@@ -197,14 +197,12 @@
                         <div class="input-wrapper">
                             <input type="text" id="registerStudentTertiaryFirstName"
                                    name="registerStudentTertiaryFirstName" />
-                            <label id="studentTertiaryFirstNameLabel" for="registerStudentTertiaryFirstName">First
-                                Name </label>
+                            <label id="studentTertiaryFirstNameLabel" for="registerStudentTertiaryFirstName">First Name </label>
                         </div>
                         <div class="input-wrapper">
                             <input type="text" id="registerStudentTertiaryLastName"
                                    name="registerStudentTertiaryLastName" />
-                            <label id="studentTertiaryLastNameLabel" for="registerStudentTertiaryLastName">Last
-                                Name </label>
+                            <label id="studentTertiaryLastNameLabel" for="registerStudentTertiaryLastName">Last Name </label>
                         </div>
                         <div class="input-wrapper">
                             <input type="text" id="registerStudentTertiarySchool" name="registerStudentTertiarySchool"
@@ -212,8 +210,8 @@
                             <label id="studentTertiarySchoolLabel" for="registerStudentTertiarySchool">School </label>
                         </div>
                         <div class="input-wrapper">
-                            <select>
-                                <option value="">Select Grade</option>
+                            <select name="studentTertiaryGrade">
+                                <option>Select Grade</option>
                                 <option>6</option>
                                 <option>7</option>
                                 <option>8</option>
@@ -233,7 +231,7 @@
                     <option value="spanish">Spanish</option>
                 </select> -->
                 <div class="radio-inputs">
-                  <input type="radio" name="language" value="english" checked /><h6>English</h6>
+                  <input type="radio" name="language" value="english" checked="checked" /><h6>English</h6>
                   <input type="radio" name="language" value="spanish" /><h6>Spanish</h6>
                 </div>
 
