--- a/src/main/resources/templates/teacher.html
+++ b/src/main/resources/templates/teacher.html
@@ -70,6 +70,15 @@
                             </div>
 
                             <div class="input-wrapper">
+                                <select>
+                                    <option value="">Select Grade</option>
+                                    <option>6</option>
+                                    <option>7</option>
+                                    <option>8</option>
+                                </select>
+                            </div>
+
+                            <div class="input-wrapper">
                                 <input type="text" id="registerFirstNameParent" name="parentFirstName"/>
                                 <label for="registerFirstNameParent">Parent First Name </label>
                             </div>
