--- a/src/main/resources/templates/parent.html
+++ b/src/main/resources/templates/parent.html
@@ -144,10 +144,14 @@
                 </div>
                 <div class="input-wrapper">
                     <select name="studentPrimaryGrade">
-                        <option>Select Grade</option>
-                        <option>6</option>
-                        <option>7</option>
-                        <option>8</option>
+                      <option>Select Grade</option>
+                      <option value="sixth">6</option>
+                      <option value="seventh">7</option>
+                      <option value="eighth">8</option>
+                      <option value="ninth">9</option>
+                      <option value="tenth">10</option>
+                      <option value="eleven">11</option>
+                      <option value="twelve">12</option>
                     </select>
                 </div>
                 <div class="input-wrapper student-notes">
@@ -179,9 +183,13 @@
                     <div class="input-wrapper">
                         <select name="studentSecondaryGrade">
                             <option>Select Grade</option>
-                            <option>6</option>
-                            <option>7</option>
-                            <option>8</option>
+                            <option value="sixth">6</option>
+                            <option value="seventh">7</option>
+                            <option value="eighth">8</option>
+                            <option value="ninth">9</option>
+                            <option value="tenth">10</option>
+                            <option value="eleven">11</option>
+                            <option value="twelve">12</option>
                         </select>
                     </div>
                     <div class="input-wrapper student-notes">
@@ -212,9 +220,13 @@
                         <div class="input-wrapper">
                             <select name="studentTertiaryGrade">
                                 <option>Select Grade</option>
-                                <option>6</option>
-                                <option>7</option>
-                                <option>8</option>
+                                <option value="sixth">6</option>
+                                <option value="seventh">7</option>
+                                <option value="eighth">8</option>
+                                <option value="ninth">9</option>
+                                <option value="tenth">10</option>
+                                <option value="eleven">11</option>
+                                <option value="twelve">12</option>
                             </select>
                         </div>
                         <div class="input-wrapper student-notes">
