--- a/src/main/resources/templates/teacher.html
+++ b/src/main/resources/templates/teacher.html
@@ -70,12 +70,16 @@
                             </div>
 
                             <div class="input-wrapper">
-                                <select>
-                                    <option value="">Select Grade</option>
-                                    <option>6</option>
-                                    <option>7</option>
-                                    <option>8</option>
-                                </select>
+                              <select name="studentPrimaryGrade">
+                                <option>Select Grade</option>
+                                <option value="sixth">6</option>
+                                <option value="seventh">7</option>
+                                <option value="eighth">8</option>
+                                <option value="ninth">9</option>
+                                <option value="tenth">10</option>
+                                <option value="eleven">11</option>
+                                <option value="twelve">12</option>
+                              </select>
                             </div>
 
                             <div class="input-wrapper">
