added default preferred language to parent page

--- a/src/main/resources/templates/parent.html
+++ b/src/main/resources/templates/parent.html
@@ -233,7 +233,7 @@
                     <option value="spanish">Spanish</option>
                 </select> -->
                 <div class="radio-inputs">
-                  <input type="radio" name="language" value="english" checked /><h6>English</h6>
+                  <input type="radio" name="language" value="english" checked="checked" /><h6>English</h6>
                   <input type="radio" name="language" value="spanish" /><h6>Spanish</h6>
                 </div>
 
