parent page updated to save in database

--- a/src/main/resources/templates/parent.html
+++ b/src/main/resources/templates/parent.html
@@ -226,13 +226,9 @@
                 <aside class="border-seperation"></aside>
 
                 <legend>Preferred Language</legend>
-                <!-- <select>
-                    <option value="english">English</option>
-                    <option value="spanish">Spanish</option>
-                </select> -->
                 <div class="radio-inputs">
-                  <input type="radio" name="language" value="english" checked="checked" /><h6>English</h6>
-                  <input type="radio" name="language" value="spanish" /><h6>Spanish</h6>
+                  <input type="radio" name="preferredLanguage" value="english" checked="checked" /><h6>English</h6>
+                  <input type="radio" name="preferredLanguage" value="spanish" /><h6>Spanish</h6>
                 </div>
 
                 <legend>Preferred Contact Method</legend>
