--- a/src/main/resources/templates/teacherSignUp.html
+++ b/src/main/resources/templates/teacherSignUp.html
@@ -73,7 +73,7 @@
             <label for="registerEmail">Email </label>
           </div>
           <div class="input-wrapper">
-            <input type="password" id="registerPassword" name="registerPassword"/>
+            <input type="password" id="registerPassword" name="password"/>
             <label for="registerPassword">Password </label>
           </div>
           <div class="input-wrapper">
