--- a/src/main/resources/templates/parent.html
+++ b/src/main/resources/templates/parent.html
@@ -145,13 +145,13 @@
                 <div class="input-wrapper">
                     <select name="studentPrimaryGrade" th:value="${primaryStudent.getGrade()}">
                       <option>Select Grade</option>
-                      <option value="sixth">6</option>
-                      <option value="seventh">7</option>
-                      <option value="eighth">8</option>
-                      <option value="ninth">9</option>
-                      <option value="tenth">10</option>
-                      <option value="eleven">11</option>
-                      <option value="twelve">12</option>
+                      <option value="6">6</option>
+                      <option value="7">7</option>
+                      <option value="8">8</option>
+                      <option value="9">9</option>
+                      <option value="10">10</option>
+                      <option value="11">11</option>
+                      <option value="12">12</option>
                     </select>
                 </div>
                 <div class="input-wrapper student-notes">
