added message logs in import.sql

--- a/src/main/resources/templates/teacher.html
+++ b/src/main/resources/templates/teacher.html
@@ -134,7 +134,7 @@
                                 <label id="emailLabel" for="registerEmail">Email </label>
                             </div>
                             <div class="input-wrapper">
-                                <input type="password" id="registerPassword" name="Password"
+                                <input type="password" id="registerPassword" name="registerPassword"
                                        th:value="${teacher.getPassword()}"/>
                                 <label id="passwordLabel" for="registerPassword">Password </label>
                             </div>
