--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -244,6 +244,7 @@ div.hopscotch-bubble .hopscotch-nav-button.next {
 
 .login-shape, .login-input {
   min-height: 650px;
+  height: 90vh;
   width: 50%;
   padding-top: 50px; }
 
