--- a/src/main/resources/static/css/partials/_login.scss
+++ b/src/main/resources/static/css/partials/_login.scss
@@ -11,7 +11,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 25px auto 3%;
+    margin: 3% auto;
     max-width: 1024px;
     width: 90%;
   }
@@ -19,7 +19,7 @@
 
 .login-shape, .login-input {
   min-height: 650px;
-  height: 90vh;
+  height: 85vh;
   width: 50%;
   padding-top: 50px;
 }
